# LangPlug

./: .env.example  .env.production  .gitignore  .npmrc  .puppeteerrc.cjs  .qwenignore  .repomix-instruction.md  .secrets.baseline  .structurelint.yml  AGENTS.md  AI_DEVELOPMENT_GUIDE.md  ARCHITECTURE_IMPROVEMENTS.md  CLAUDE.md  CLEANUP_ACTION_PLAN_PRIORITIZED.md  CLEANUP_ANALYSIS_DETAILED.md  CLEANUP_OPPORTUNITIES.md  CLEANUP_OPPORTUNITIES_EXECUTIVE_SUMMARY.md  CLEANUP_QUICK_REFERENCE.md  CODE_QUALITY_IMPROVEMENTS_REPORT.md  CODE_QUALITY_STANDARDS.md  CODE_REVIEW_PLAN.md  CODE_REVIEW_REPORT.md  CODE_SIMPLIFICATION_ROADMAP.md  COMPREHENSIVE_TESTING_SUMMARY.md  CONCURRENCY_SAFE_MODELS.md  CONTRACTDRIVENDEVELOPMENT.MD  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_SESSION_SUMMARY.md  CRUSH.md  CUDA_Memory_Optimization_Summary.md  DEPENDABOT_MERGE_REPORT.md  DEPENDENCY_UPDATE_SUMMARY.md  E2E_TEST_STATUS.md  FINAL-COMPLETION-REPORT.py  GEMINI.md  GRANULAR_INTERFACES_SUMMARY.md  Makefile  OPENAPI_SPECIFICATION.md  OPTION_A_VOCABULARY_SERVICES_COMPLETE.md  PARALLEL_TRANSCRIPTION.md  (+61 more)
Backend/: .coveragerc  .env.example  .env.testing  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE_AFTER_REFACTORING.md  BACKEND_TEST_OPTIMIZATION.md  CHANGELOG.md  CODE_QUALITY_TOOLS.md  Dockerfile  HOW_TO_SEE_NEW_LEMMAS.txt  LANGUAGE_FIXES_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  NEXT_REFACTORING_CANDIDATES.md  POSTGRESQL_SETUP_GUIDE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SPRINT_FINAL_SUMMARY.md  REFACTORING_SUMMARY.md  TESTING_BEST_PRACTICES.md  TEST_CLEANUP_NEEDED.md  TEST_CLEANUP_PROGRESS.md  TEST_ISOLATION_ANALYSIS.md  TEST_OPTIMIZATION_GUIDE.md  TEST_REPORT.md  TEST_RESULTS_SUMMARY.md  TEST_UTILITIES_ANALYSIS.md  all_tests_output_direct.txt  all_tests_output_final.txt  all_tests_output_venv.txt  apply_schema.py  apply_search_indexes.py  architectural_review.py  auto_venv.py  backend_integration_test_output2.txt  backend_integration_test_output3.txt  bandit_report.json  catch_error.py  (+91 more)
Backend/alembic/: env.py
Backend/alembic/versions/: 0b9cb76a1e84_migrate_to_lemma_based_vocabulary.py  10f18f66a1df_add_password_migration_tracking_column.py  879b4bfbd98e_initial_migration.py  add_vocabulary_search_indexes.py
Backend/api/: websocket_manager.py
Backend/api/dtos/: __init__.py  auth_dto.py  game_dto.py  progress_dto.py  vocabulary_dto.py
Backend/core/: __init__.py  api_gateway.py  app.py  auth.py  auth_dependencies.py  auth_security.py  caching.py  config.py  config_validator.py  constants.py  contract_middleware.py  csrf_config.py  database.py  database_session.py  dependencies.py  enums.py  event_cache_integration.py  exception_handlers.py  exceptions.py  language_preferences.py  logging.py  logging_config.py  middleware.py  monitoring.py  rate_limit.py  rate_limiter.py  repository_dependencies.py  security_middleware.py  sentry_config.py  service_dependencies.py  task_dependencies.py  token_blacklist.py  transaction.py  versioning.py
Backend/data/: 10K  10K_formatted_sample.csv  A1_vokabeln.csv  A2_vokabeln.csv  B1_vokabeln.csv  B2_vokabeln.csv  README.MD.txt  a1.txt  a2.txt  b1.txt  b2.txt  brands.txt  charaktere.txt  format_10k_vocabulary.py  giuliwords.txt  globalunknowns.json  import_csv_to_vocabulary_words.py  import_vocabulary_standalone.py  interjections.txt  refined_base_form_analysis.py  remove_duplicates.py  replace_vocabulary_db.py  simple_import.py  swaps.md  test_multilingual.py  translate_csv.py  verify_actual_db.py  verify_database.py  vocabulary.txt  vocabulary_redistribution_plan.md  vocabulary_violations_analysis.py
Backend/database/: __init__.py  async_database_manager.py  cli.py  database_manager.py  migrate_to_bcrypt.py  models.py  postgresql_schema.sql  schema.sql  unified_migration.py
Backend/docs/: API_CONTRACT_TESTING_GUIDE.md  API_INTEGRATION_GUIDE.md  ARCHITECTURE_OVERVIEW.md  BUG_FIXES_AND_TESTING_IMPROVEMENTS.md  CODE_METRICS_GUIDE.md  CODE_REVIEW_RESULTS.md  CODE_STYLE.md  COMPLETE_TESTING_LAYERS_SUMMARY.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  DTO_STANDARDS.md  EMAIL_VS_USERNAME_CLARIFICATION.md  INTEGRATION_TEST_STRATEGY.md  LAYER_7_COMPLETION_SUMMARY.md  MIGRATIONS.md  MIGRATION_GUIDE.md  MONITORING.md  NLLB_TRANSLATION.md  PATH_STANDARDIZATION_PLAN.md  POSTGRESQL_SETUP_GUIDE.md  REPOSITORY_PATTERN.md  ROUTE_NAMES.md  TESTING_BEST_PRACTICES.md  TESTING_COMPLETION_SUMMARY.md  TESTING_COVERAGE_REPORT.md  TESTING_FINAL_REPORT.md  TESTING_INDEX.md  TESTING_QUICK_REFERENCE.md  TEST_IMPROVEMENTS_NO_MOCKING.md  postgresql_migration_plan.md
Backend/domains/: __init__.py
Backend/plans/: codereview-DIFF-20250927-220306-COMPLETED.md  codereview-DIFF-20250927-220306.md  codereview-FULL-20250927-221156-PROGRESS.md  codereview-FULL-20250927-221156.md  logging-service-analysis.md  logging-service-refactoring-complete.md  no-backward-compatibility-rule.md
Backend/scripts/: basic_diagnostic.py  cleanup_and_start.py  deprecated_run_passing_tests.py.disabled  live_api_probe.py  robust_cleanup_start.py  run_checks.py  run_tests_postgres.ps1  run_tests_postgres.sh  simple_health_test.py  test_management.py
Backend/services/: __init__.py  lemmatization_service.py  service_factory.py  vocabulary_preload_service.py  vocabulary_service.py  vocabulary_service_old.py
Backend/tests/: EXTERNAL_DEPENDENCY_ELIMINATION.md  IMPLEMENTATION_COUPLING_ELIMINATION.md  MIGRATION_GUIDE.md  README.md  TESTING_BEST_PRACTICES.md  TEST_ISOLATION_GUIDE.md  TEST_STANDARDS.md  assertion_helpers.py  auth_helpers.py  base.py  conftest.py  conftest_robust.py  example_robust_tests.py  fixture_validation.py  mock_standards.py  optimize_test_suite.py  run_backend_tests.py  test_minimal.py  test_sample_working.py  test_simple.py
Backend/utils/: media_validator.py  srt_parser.py  transcription.py  video_downloader.py
src/backend/: .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  project.json  pyproject.toml  repro_output.md  repro_output_2.md  repro_output_3.md  repro_output_4.md  reproduce_issue.py  requirements.txt  run_backend.py
(+1220 files in other folders)
