[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langplug-backend"
version = "0.1.0"
description = "LangPlug Backend - Language Learning Platform"
requires-python = ">=3.11"

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests", "data"]
pythonpath = ["."]
addopts = "-q"

# ============================================================================
# RUFF - Fast Python linter and formatter (replaces flake8, isort, black)
# ============================================================================
[tool.ruff]
# File/directory exclusions
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "api_venv",
    "alembic/versions",
]

# Line length to match Black
line-length = 120
indent-width = 4

# Target Python version
target-version = "py311"

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# Disable specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert (needed for pytest)
    "S104",   # Possible binding to all interfaces
    "S105",   # Possible hardcoded password (false positives in tests)
    "S106",   # Possible hardcoded password (false positives in tests)
    "S107",   # Possible hardcoded password (false positives in tests)
    "PLR0913", # Too many arguments (common in dependencies)
    "ARG002", # Unused method argument (common in FastAPI)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["api", "core", "database", "services", "domains", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
# Test files - allow print statements, magic values, assert
"tests/**/*.py" = ["T20", "PLR2004", "S101"]
# Alembic migrations - allow many statements
"alembic/versions/*.py" = ["E501", "PLR0915"]
# Init files - allow unused imports
"__init__.py" = ["F401"]

# ============================================================================
# BLACK - Code formatter (Optional - Ruff's formatter is recommended)
# Note: Ruff's formatter is being used. This config is kept for compatibility
# ============================================================================
# [tool.black]
# line-length = 120
# target-version = ['py311']
# include = '\.pyi?$'
# extend-exclude = '''
# /(
#     \.eggs
#   | \.git
#   | \.hg
#   | \.mypy_cache
#   | \.tox
#   | \.venv
#   | _build
#   | buck-out
#   | build
#   | dist
#   | api_venv
#   | alembic/versions
# )/
# '''

# ============================================================================
# MYPY - Static type checker
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
disallow_incomplete_defs = false  # Gradually enable
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true

# Exclude paths
exclude = [
    "^api_venv/",
    "^venv/",
    "^build/",
    "^dist/",
    "^alembic/versions/",
]

# Per-module options
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "alembic.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "srt.*",
    "pysrt.*",
    "spacy.*",
    "transformers.*",
    "torch.*",
    "nemo.*",
    "whisper.*",
]
ignore_missing_imports = true

# ============================================================================
# BANDIT - Security linter
# ============================================================================
[tool.bandit]
exclude_dirs = [
    "tests",
    "api_venv",
    "venv",
    ".venv",
    "build",
    "dist",
]
skips = [
    "B101",  # assert_used (needed for tests)
    "B601",  # paramiko calls (if using SSH legitimately)
]

# ============================================================================
# COVERAGE - Code coverage
# ============================================================================
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/api_venv/*",
    "*/.venv/*",
    "*/alembic/versions/*",
    "*/conftest.py",
    "*/setup.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
