[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langplug-backend"
version = "0.1.0"
description = "LangPlug Backend - Language Learning Platform"
requires-python = ">=3.11"

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests", "data"]
pythonpath = ["."]
addopts = "-q"

# ============================================================================
# RUFF - Fast Python linter and formatter (replaces flake8, isort, black)
# ============================================================================
[tool.ruff]
# File/directory exclusions
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "api_venv",
    "alembic/versions",
]

# Line length to match Black
line-length = 120
indent-width = 4

# Target Python version
target-version = "py311"

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# Disable specific rules
ignore = [
    "E402",   # Module level import not at top (needed for path setup)
    "E501",   # Line too long (handled by formatter)
    "E722",   # Bare except (acceptable in cleanup code)
    "B008",   # Function call in argument default (FastAPI Depends pattern)
    "S101",   # Use of assert (needed for pytest)
    "S104",   # Possible binding to all interfaces
    "S105",   # Possible hardcoded password (false positives in tests)
    "S106",   # Possible hardcoded password (false positives in tests)
    "S107",   # Possible hardcoded password (false positives in tests)
    "S110",   # try-except-pass (sometimes acceptable for cleanup)
    "S311",   # Random for non-cryptographic purposes (acceptable in tests)
    "S602",   # subprocess with shell=True (controlled in scripts)
    "S603",   # subprocess call (controlled in scripts)
    "S608",   # SQL injection (controlled parameterized queries)
    "B007",   # Unused loop variable (acceptable for iteration count)
    "PLR0911", # Too many return statements (acceptable for validation)
    "PLR0912", # Too many branches (acceptable for complex logic)
    "PLR0913", # Too many arguments (common in dependencies)
    "PLR0915", # Too many statements (acceptable for E2E tests)
    "PLW0603", # Global statement (used for singletons)
    "ARG001", # Unused function argument (common in FastAPI)
    "ARG002", # Unused method argument (common in FastAPI)
    "ARG005", # Unused lambda argument (common in mocks)
    "PTH108", # os.unlink vs Path.unlink (gradual migration)
    "PTH110", # os.path.exists vs Path.exists (gradual migration)
    "PTH119", # os.path.basename vs Path.name (gradual migration)
    "PTH123", # Use Path.open() instead of open() (gradual migration)
    "ERA001", # Commented-out code (sometimes intentional for documentation)
    "N802",   # Function naming conventions (test naming style)
    "N806",   # Variable naming conventions (acceptable for constants)
    "N815",   # Variable naming mixedCase (common in DTOs/external APIs)
    "N999",   # Invalid module name (Backend is project name)
    "PLR2004", # Magic values (acceptable for constants)
    "SIM105", # contextlib.suppress suggestions (readability preference)
    "SIM108", # Ternary operator suggestions (readability preference)
    "SIM115", # Context manager suggestions (specific use cases)
    "SIM117", # Combine with statements (readability preference)
    "UP038",  # isinstance with tuple (compatibility with older Python)
    "F403",   # Star imports (used in interfaces)
    "F405",   # Undefined from star imports (side effect of F403)
    "F841",   # Unused variable (may be needed for validation)
    "RUF012", # ClassVar annotations (gradual typing improvement)
    "RUF013", # Implicit Optional (gradual typing improvement)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["api", "core", "database", "services", "domains", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
# Test files - allow print statements, magic values, assert
"tests/**/*.py" = ["T20", "PLR2004", "S101"]
# Alembic migrations - allow many statements
"alembic/versions/*.py" = ["E501", "PLR0915"]
# Init files - allow unused imports
"__init__.py" = ["F401"]
# Scripts directory - allow print statements, os.path for console utilities
"scripts/**/*.py" = ["T20", "PTH100", "PTH120"]

# ============================================================================
# BLACK - Code formatter (Optional - Ruff's formatter is recommended)
# Note: Ruff's formatter is being used. This config is kept for compatibility
# ============================================================================
# [tool.black]
# line-length = 120
# target-version = ['py311']
# include = '\.pyi?$'
# extend-exclude = '''
# /(
#     \.eggs
#   | \.git
#   | \.hg
#   | \.mypy_cache
#   | \.tox
#   | \.venv
#   | _build
#   | buck-out
#   | build
#   | dist
#   | api_venv
#   | alembic/versions
# )/
# '''

# ============================================================================
# MYPY - Static type checker
# ============================================================================
[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"
warn_return_any = false  # Gradual typing - allow Any returns
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
disallow_incomplete_defs = false  # Gradually enable
check_untyped_defs = false  # Gradual typing - check only typed functions
disallow_untyped_decorators = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
pretty = true

# Exclude paths
exclude = [
    "^api_venv/",
    "^venv/",
    "^build/",
    "^dist/",
    "^alembic/versions/",
]

# Per-module options
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "alembic.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "srt.*",
    "pysrt.*",
    "spacy.*",
    "transformers.*",
    "torch.*",
    "nemo.*",
    "whisper.*",
]
ignore_missing_imports = true

# ============================================================================
# BANDIT - Security linter
# ============================================================================
[tool.bandit]
exclude_dirs = [
    "tests",
    "api_venv",
    "venv",
    ".venv",
    "build",
    "dist",
    "scripts",
    "management",
]
skips = [
    "B101",  # assert_used (needed for tests)
    "B105",  # hardcoded_password_string (false positives for rate limits, token types)
    "B106",  # hardcoded_password_funcarg (false positive for "bearer" token type)
    "B110",  # try_except_pass (acceptable in logging/cleanup code)
    "B404",  # subprocess import (needed in scripts)
    "B601",  # paramiko calls (if using SSH legitimately)
    "B603",  # subprocess_without_shell_equals_true (controlled subprocess calls)
    "B607",  # start_process_with_partial_path (npm commands in scripts)
]

# ============================================================================
# COVERAGE - Code coverage
# ============================================================================
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/api_venv/*",
    "*/.venv/*",
    "*/alembic/versions/*",
    "*/conftest.py",
    "*/setup.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
