[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langplug-backend"
version = "0.1.0"
description = "LangPlug Backend - Language Learning Platform"
requires-python = ">=3.11"

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests", "data"]
pythonpath = ["."]
addopts = "-q"
cache_dir = "../../.cache/pytest"

# Test markers for categorizing tests by speed/type
markers = [
    "slow: marks tests as slow (run with pytest -m slow)",
    "fast: marks tests as fast (default, run with pytest -m 'not slow')",
    "integration: integration tests requiring external resources",
    "ai_models: tests that download/load AI models (slow)",
    "e2e: end-to-end tests (slowest)",
]

# ============================================================================
# RUFF - Fast Python linter and formatter (replaces flake8, isort, black)
# ============================================================================
[tool.ruff]
# Cache directory
cache-dir = "../../.cache/ruff"

# File/directory exclusions
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "api_venv",
    "alembic/versions",
]

# Line length to match Black
line-length = 120
indent-width = 4

# Target Python version
target-version = "py311"

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "C90",    # mccabe (cyclomatic complexity)
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# Disable specific rules
ignore = [
    "E402",   # Module level import not at top (needed for path setup)
    "E501",   # Line too long (handled by formatter)
    "E722",   # Bare except (acceptable in cleanup code)
    "B008",   # Function call in argument default (FastAPI Depends pattern)
    "S101",   # Use of assert (needed for pytest)
    "S104",   # Possible binding to all interfaces
    "S105",   # Possible hardcoded password (false positives in tests)
    "S106",   # Possible hardcoded password (false positives in tests)
    "S107",   # Possible hardcoded password (false positives in tests)
    "S110",   # try-except-pass (sometimes acceptable for cleanup)
    "S311",   # Random for non-cryptographic purposes (acceptable in tests)
    "S602",   # subprocess with shell=True (controlled in scripts)
    "S603",   # subprocess call (controlled in scripts)
    "S608",   # SQL injection (controlled parameterized queries)
    "B007",   # Unused loop variable (acceptable for iteration count)
    "PLR0911", # Too many return statements (acceptable for validation)
    "PLR0912", # Too many branches (acceptable for complex logic)
    "PLR0913", # Too many arguments (common in dependencies)
    "PLR0915", # Too many statements (acceptable for E2E tests)
    "PLW0603", # Global statement (used for singletons)
    "PLW0127", # Self-assignment (Python 3.10 UTC compatibility pattern)
    "ARG001", # Unused function argument (common in FastAPI)
    "ARG002", # Unused method argument (common in FastAPI)
    "ARG005", # Unused lambda argument (common in mocks)
    "PTH108", # os.unlink vs Path.unlink (gradual migration)
    "PTH110", # os.path.exists vs Path.exists (gradual migration)
    "PTH119", # os.path.basename vs Path.name (gradual migration)
    "PTH123", # Use Path.open() instead of open() (gradual migration)
    "ERA001", # Commented-out code (sometimes intentional for documentation)
    "N802",   # Function naming conventions (test naming style)
    "N806",   # Variable naming conventions (acceptable for constants)
    "N815",   # Variable naming mixedCase (common in DTOs/external APIs)
    "N999",   # Invalid module name (Backend is project name)
    "PLR2004", # Magic values (acceptable for constants)
    "SIM105", # contextlib.suppress suggestions (readability preference)
    "SIM108", # Ternary operator suggestions (readability preference)
    "SIM115", # Context manager suggestions (specific use cases)
    "SIM117", # Combine with statements (readability preference)
    "UP038",  # isinstance with tuple (compatibility with older Python)
    "F403",   # Star imports (used in interfaces)
    "F405",   # Undefined from star imports (side effect of F403)
    "F841",   # Unused variable (may be needed for validation)
    "RUF001", # Ambiguous Unicode (IPA pronunciation, legitimate Unicode)
    "RUF012", # ClassVar annotations (gradual typing improvement)
    "RUF013", # Implicit Optional (gradual typing improvement)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["api", "core", "database", "services", "domains", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity allowed
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Test files - allow print statements, magic values, assert, imports inside functions (conditional/deferred imports)
"tests/**/*.py" = ["T20", "PLR2004", "S101", "PLC0415", "C901", "S318", "PLW2901", "SIM102"]
# Alembic migrations - allow many statements
"alembic/versions/*.py" = ["E501", "PLR0915"]
# Init files - allow unused imports
"__init__.py" = ["F401"]
# Test files - allow imports in functions, complexity for test utilities
"tests/fixture_validation.py" = ["RUF006"]
"tests/integration/test_database_operations.py" = ["B017"]
"tests/monitoring/*.py" = ["S607"]
"tests/utils/*.py" = ["PTH207", "PTH118"]
# Scripts directory - allow print statements, os.path, imports in functions, complexity, subprocesses
"scripts/**/*.py" = ["T20", "PTH100", "PTH109", "PTH120", "PLC0415", "C901", "S607", "S310"]
# Pre-commit hooks - allow print statements (CLI tools)
".pre-commit-hooks/*.py" = ["T20"]
# Data scripts - allow imports inside functions (conditional ML dependencies), complexity
"data/*.py" = ["PLC0415", "C901", "T201", "PLC0206", "PTH118"]
# Utils - allow imports inside functions (lazy imports), complexity
"utils/*.py" = ["PLC0415", "C901"]
# Core modules - allow imports inside functions (avoid circular imports), global checks
"core/*.py" = ["PLC0415", "PLW0602"]
# Core exception handlers - complexity acceptable
"core/exception_handlers.py" = ["C901"]
# API routes - allow imports inside functions (deferred DB sessions, avoid circular imports)
"api/routes/*.py" = ["PLC0415"]
# Services - allow imports inside functions (avoid circular imports), complexity for ML operations
"services/**/*.py" = ["PLC0415"]
"services/processing/*.py" = ["C901"]
"services/transcriptionservice/*.py" = ["PTH111"]
# Database CLI - allow imports inside functions (lazy imports for CLI commands), PTH usage
"database/cli.py" = ["PLC0415", "PTH202"]
# Database repositories - allow imports inside functions (avoid circular imports)
"database/repositories/*.py" = ["PLC0415"]
# Run backend script - allow imports inside functions (startup verification), complexity
"run_backend.py" = ["PLC0415", "C901", "F401"]

# ============================================================================
# BLACK - Code formatter (Optional - Ruff's formatter is recommended)
# Note: Ruff's formatter is being used. This config is kept for compatibility
# ============================================================================
# [tool.black]
# line-length = 120
# target-version = ['py311']
# include = '\.pyi?$'
# extend-exclude = '''
# /(
#     \.eggs
#   | \.git
#   | \.hg
#   | \.mypy_cache
#   | \.tox
#   | \.venv
#   | _build
#   | buck-out
#   | build
#   | dist
#   | api_venv
#   | alembic/versions
# )/
# '''

# ============================================================================
# MYPY - Static type checker
# ============================================================================
[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"
cache_dir = "../../.cache/mypy"
# Gradual typing - enable warnings for better code quality
warn_return_any = true  # Warn when returning Any from typed function
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable per-module
disallow_incomplete_defs = false  # Gradually enable per-module
check_untyped_defs = true  # Check untyped function bodies
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
follow_imports = "normal"  # Analyze imported modules
ignore_missing_imports = true  # Keep true for third-party libs without stubs

# Exclude paths (only infrastructure, not application code)
exclude = [
    "^api_venv/",
    "^venv/",
    "^build/",
    "^dist/",
    "^alembic/versions/",
    "^docs/examples/",  # Example code only
]

# Per-module options
[[tool.mypy.overrides]]
module = "services.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "utils.*"
ignore_errors = true

# Tests should be type-checked but with relaxed rules
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

# ============================================================================
# BANDIT - Security linter
# ============================================================================
[tool.bandit]
exclude_dirs = [
    "tests",
    "api_venv",
    "venv",
    ".venv",
    "build",
    "dist",
    "scripts",
    "management",
]
skips = [
    "B101",  # assert_used (needed for tests)
    "B105",  # hardcoded_password_string (false positives for rate limits, token types)
    "B106",  # hardcoded_password_funcarg (false positive for "bearer" token type)
    "B110",  # try_except_pass (acceptable in logging/cleanup code)
    "B404",  # subprocess import (needed in scripts)
    "B601",  # paramiko calls (if using SSH legitimately)
    "B603",  # subprocess_without_shell_equals_true (controlled subprocess calls)
    "B607",  # start_process_with_partial_path (npm commands in scripts)
]

# ============================================================================
# COVERAGE - Code coverage
# ============================================================================
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/api_venv/*",
    "*/.venv/*",
    "*/alembic/versions/*",
    "*/conftest.py",
    "*/setup.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
